				LINE ADVANCING

2021-10-23  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_command_line) [__TINYC__, __OS400__): early exit when
	  assembling is requested, for the testsuite with a "skip" status
	* cobc.c: removed unused aflag_set, renamed gflag_set to source_debugging
	* cobc.c (process) [__OS400__]: simplified source-debugging handling

2021-10-04  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_integer, output_long_integer): use
	  integer exponentiation in libcob instead of floating point
	  from libmath/math.h, fixing #702

2021-10-01  Simon Sobisch <simonsobisch@gnu.org>

	* ppparse.y, pplex.l, scanner.l: implementation of COBOL-WORDS directive
	* reserved.c, cobc.h, tree.h: added missing COBOL 202x reserved words
	  and intrinsic functions to the internal lists
	* parser.y: _parsing_ of INSPECT BACKWARD, SEND mcs

2021-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c: use of new enum cobc_init_type instead of comparing an int
	  to #define'd constants, reduced some variable scope

2021-09-29  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_file_initialization): don't generate attribute
	  setting which is done in cob_file_malloc / cob_file_external_addr

2021-09-27  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_generic_register): handle CONSTANT
	* error.c (ambiguous_error): handling for internal definitions / registers
	* typeck.c (cb_build_generic_register), tree.h: optionally return
	  cob_field for register
	* cobc.c, cobc.h, reserved.c: code for ancient OSVS registers - disabled

2021-09-25  Ron Norman <rjn@inglenet.com>

	* cobc.c: Defer processing of -std= as much as possible. Needed to
			be able to insert -std=default for test cases even if
			the compiler was built with a differente default
	* flag.def, cobc.c: Add -ffile-format= mf | gc 
			Defines default file format for Sequential/Relative files
			(This obsoletes -fmf-files which could be removed later)
